Try change Observable into Subject, nothing change

--- a/src/app/pages/data-book/data-book.component.html
+++ b/src/app/pages/data-book/data-book.component.html
@@ -12,6 +12,7 @@
   (onSelectionChanged)="onSelectionChanged($event)"
   (onRowInserted)="onRowInserted($event)"
   (onRowUpdated)="onRowUpdated($event)"
+  (onRowRemoved)="onRowRemoved($event)"
 >
   <dxo-paging [pageSize]="10"></dxo-paging>
   <dxo-pager [showPageSizeSelector]="true" [showInfo]="true"></dxo-pager>
